--- a/css/login.css
+++ b/css/login.css
@@ -276,6 +276,8 @@ footer{
 }
 /* จบส่วนfooter */
 
+
+
 /*หน้า user*/
 .user-box {
     text-align: center;
@@ -310,6 +312,10 @@ footer{
     text-decoration: none;
 }
 
+.approve:hover{
+    background-color: #4caf50;
+}
+
 .reject {
     background-color: #f44336;
     color: white;
@@ -318,6 +324,10 @@ footer{
     cursor: pointer;
     border-radius: 10px;
     text-decoration: none;
+}
+
+.reject:hover{
+    background-color: #f44336;
 }
 
 textarea {
@@ -334,6 +344,10 @@ textarea {
     border: none;
     cursor: pointer;
     border-radius: 10px;
+}
+
+.submit:hover{
+    background-color: #1976d2;
 }
 /*จบส่วนอนุมัติ/ส่งกลับ/submit*/
 
@@ -384,7 +398,6 @@ textarea {
 
 /*ส่วนของรายละเอียดโครงงาน*/
 .project-detail {
-  padding: 30px;
   background-color: #f9f9f9;
   border-radius: 8px;
 }
@@ -397,8 +410,59 @@ textarea {
 
 .project-info ul {
   list-style: disc;
-  margin-left: 30px;
 }
 /*จบส่วนของรายละเอียดโครงงาน*/
 
+/*ส่วนแบบฟอร์ม*/
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
+select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+/*ส่วนแบบฟอร์ม*/
+
+/*ส่วนปุ่มยื่นคำร้องจบ*/
+button {
+  width: 100%;
+  padding: 12px;
+  background-color: #757575;
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #757575;
+}
+/*จบส่วนปุ่มยื่นคำร้องจบ*/
+
+/*กล่องความคิดเห็น*/
+textarea {
+  width: 100%;
+  padding: 12px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  resize: vertical; /* ให้ปรับความสูงได้ แต่ไม่บังคับ */
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+/*จบกล่องความคิดเห็น*/
