--- a/css/admin.css
+++ b/css/admin.css
@@ -7,7 +7,7 @@
 /* จัด layout ของบล็อค */
 .admin-section {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 4 คอลัมน์ */
+  grid-template-columns: repeat(4, 1fr); /*สร้างคอลัมน์ในgrid 1fr = 1 ส่วนแบ่งพื้นที่เท่ากัน*/
   gap: 20px;
   margin: 30px auto;
   max-width: 900px;
@@ -57,8 +57,8 @@
 /* layout บล็อคผู้ใช้ */
 .user-section {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);/*สร้างคอลัมน์ในgrid 1fr = 1 ส่วนแบ่งพื้นที่เท่ากัน*/
+  gap: 20px;/*ช่องว่างระหว่างแต่ละ grid item (ทั้งแนวตั้ง + แนวนอน)*/
   margin: 30px auto;
   max-width: 1000px;
 }
@@ -66,7 +66,7 @@
 /* กล่องผู้ใช้ */
 .user-box {
   background: #fff;
-  border: 2px solid #ccc;
+  border: 2px solid #ccc;/*เส้นขอบ*/
   border-radius: 8px;
   padding: 20px;
   text-align: center;
@@ -123,50 +123,59 @@
 .search-bar button {
   flex: 0.8;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: center;/*ใช้คู่กับ flex containerจะถูกจัดเรียงแบบ flex (แนวนอนเป็นค่าเริ่มต้น)*/
+  justify-content: center;/*ใช้คู่กับ flex container จัดให้อยู่กึ่งกลางในแนวนอน*/
   padding: 0;
-  height: 42px;
+  height: 42px; /*กำหนดความสูงของ element*/
   background: #3498db;
   color: #fff;
   border: none;
-  border-radius: 6px;
-  cursor: pointer;
+  border-radius: 6px;/*ทำให้มุมโค้งมนรัศมี*/
+  cursor: pointer;/*เวลาเอาเมาส์ชี้จะเปลี่ยนเป็นรูปมือ*/
   transition: 0.2s;
   box-shadow: 0 4px 6px rgba(0,0,0,0.2); /* เงาตอนปกติ */
 }
 /*จบปุ่ม search หน้าสรุปโครงงาน*/
 
-/*หน้า setting*/
+/*หน้า setting */
+h1 {
+  text-align: center;
+  color: #fcfcfc;
+}
+h2 {
+  margin-top: 30px;
+  color: #121212;
+  padding-bottom: 5px;
+}
 .form-group {
-  margin-bottom: 15px;
+  margin: 15px 0;
+}
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-.form-actions {
+.btn-group {
   text-align: center;
   margin-top: 20px;
+  padding: 15px 40px;
 }
-
-.savee-btn {
-  background: #27ae60;
-  color: white;
-  padding: 10px 20px;
+.btn {
   border: none;
-  border-radius: 6px;
+  border-radius: 8px;
   cursor: pointer;
-  font-size: 14px;
-  transition: 0.3s;
+  margin: 5px;
+  padding: 15px 40px;
+  justify-content: center
 }
 
-.savee-btn:hover {
-  background: #27ae60;
+.btn-save {
+  background: #3498db;
+  color: #fff;
+}
+.btn-cancel {
+  background: #e74c3c;
+  color: #fff;
 }
 
-input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-}
-
-/*จบหน้า setting*/
